# gcpeasy

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  REVIEW.md  TODO.md  pyproject.toml
.ruler/: AGENTS.md  coding_style.md
src/gcpeasy/: __init__.py
src/gcpeasy/bq/: README.md  __init__.py  client.py  dataset.py  file_utils.py  schema.py  table.py  validation.py
src/gcpeasy/gcs/: __init__.py
src/gcpeasy/secretmanager/: README.md  __init__.py  client.py
src/geasyp/: __init__.py
src/geasyp/bq/: __init__.py  client.py  dataset.py  file_utils.py  schema.py  table.py
src/geasyp/gcs/: __init__.py
src/geasyp/secretmanager/: __init__.py
tests/: test_bq_advanced.py  test_bq_client.py  test_bq_crud.py  test_bq_dataset.py  test_bq_file_loading.py  test_bq_metadata.py  test_bq_new_params.py  test_bq_security.py  test_bq_table.py  test_bq_write.py  test_secretmanager_client.py
